update commit DTO + screenshot